// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddSourceModal > matches snapshot for the config step (github preset) 1`] = `
"<div style="position: fixed; inset: 0; display: grid; place-items: center; z-index: 50; padding: 24px;">
  <div class="card" style="width: 600px; max-width: 100%; max-height: 90%; overflow: auto; box-shadow: var(--sh-pop);">
    <!-- head -->
    <div class="row between" style="padding: 18px 24px; border-bottom-width: var(--line); border-bottom-style: var(--line); border-bottom-color: var(--line);">
      <div class="row gap-3" style="align-items: center;"><button class="icon-btn"><svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" style="transform: rotate(180deg);">
            <polyline points="9 18 15 12 9 6"></polyline>
          </svg></button>
        <div class="col" style="gap: 2px;"><span class="mono faint" style="font-size: 10.5px; letter-spacing: 0.12em; text-transform: uppercase;">step 2 / 2</span>
          <h3 style="font-size: 17px; font-weight: 600;">Configure GitHub</h3>
        </div>
      </div><button class="icon-btn"><svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <line x1="18" y1="6" x2="6" y2="18"></line>
          <line x1="6" y1="6" x2="18" y2="18"></line>
        </svg></button>
    </div><!-- step: pick -->
    <!--v-if-->
    <!-- step: config -->
    <div style="padding: 24px;">
      <div style="margin-bottom: 16px;">
        <div class="alert info" role="alert"><svg class="ico a-ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
            <circle cx="12" cy="12" r="10"></circle>
            <line x1="12" y1="16" x2="12" y2="12"></line>
            <line x1="12" y1="8" x2="12.01" y2="8"></line>
          </svg>
          <div class="a-body">
            <div class="a-title">This is a webhook preset</div>
            <div class="a-text"> A <strong>GitHub</strong> source is a webhook endpoint with GitHub field-mapping applied automatically, with signature verification. You can edit the mapping any time. </div>
          </div>
          <!--v-if-->
        </div>
      </div><span class="field-label" style="margin-bottom: 8px;">ingest url — point GitHub here</span>
      <div class="code">
        <div class="code-head"><span class="lang">endpoint</span><span class="mono faint" style="font-size: 11px;">assigned on save</span></div>
        <div class="code-body mono" style="font-size: 12.5px; word-break: break-all;"> https://ingest.markpost.io/v1/hooks/<span style="color: var(--accent-700);">github_xxxxxxxx</span></div>
      </div>
      <div style="margin-top: 16px;"><span class="field-label" style="margin-bottom: 8px;">field mapping</span>
        <div class="row wrap gap-2"><span class="chip accent">repo</span><span class="chip accent">ref</span><span class="chip accent">title</span><span class="chip accent">body</span></div>
      </div>
      <!--v-if-->
      <div style="margin-top: 18px;">
        <div class="field"><span class="field-label"><span class="num">01</span><span>Route records to</span>
          <!--v-if-->
          <!--v-if--></span>
          <div class="input-wrap"><span class="lead-addon"><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"></path></svg></span><input class="input has-lead mono" style="font-size: 13.5px;"></div><span class="field-msg"><!--v-if--><!--v-if--> folder inside your vault</span>
        </div>
      </div>
      <div class="row gap-3" style="justify-content: flex-end; margin-top: 22px;"><button class="btn btn-ghost">
          <!--v-if-->back
          <!--v-if-->
        </button><button class="btn btn-accent"><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
            <polyline points="20 6 9 17 4 12"></polyline>
          </svg>add source
          <!--v-if-->
        </button></div>
    </div><!-- step: reveal (secret-backed presets only — shown once, right after creation) -->
    <!--v-if-->
  </div>
</div>"
`;

exports[`AddSourceModal > matches snapshot for the pick step 1`] = `
"<div style="position: fixed; inset: 0; display: grid; place-items: center; z-index: 50; padding: 24px;">
  <div class="card" style="width: 600px; max-width: 100%; max-height: 90%; overflow: auto; box-shadow: var(--sh-pop);">
    <!-- head -->
    <div class="row between" style="padding: 18px 24px; border-bottom-width: var(--line); border-bottom-style: var(--line); border-bottom-color: var(--line);">
      <div class="row gap-3" style="align-items: center;">
        <!--v-if-->
        <div class="col" style="gap: 2px;"><span class="mono faint" style="font-size: 10.5px; letter-spacing: 0.12em; text-transform: uppercase;">step 1 / 2</span>
          <h3 style="font-size: 17px; font-weight: 600;">Add a source</h3>
        </div>
      </div><button class="icon-btn"><svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <line x1="18" y1="6" x2="6" y2="18"></line>
          <line x1="6" y1="6" x2="18" y2="18"></line>
        </svg></button>
    </div><!-- step: pick -->
    <div style="padding: 24px;"><span class="field-label" style="margin-bottom: 12px;">two ways in</span>
      <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 12px;"><button class="card" style="padding: 16px; text-align: left; cursor: pointer; background: var(--surface-2); display: block;">
          <div class="row between"><span style="width: 36px; height: 36px; border-radius: 8px; background: var(--accent-tint); color: var(--accent-700); display: grid; place-items: center;"><svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><polygon points="13 2 3 14 12 14 11 22 21 10 12 10 13 2"></polygon></svg></span><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" style="color: var(--ink-3);">
              <line x1="5" y1="12" x2="19" y2="12"></line>
              <polyline points="12 5 19 12 12 19"></polyline>
            </svg></div>
          <div style="font-weight: 600; font-size: 14.5px; margin-top: 12px;">Webhook endpoint</div>
          <div class="muted" style="font-size: 12.5px; margin-top: 4px; line-height: 1.45;">POST any JSON to a unique URL. The raw building block every integration uses.</div>
        </button><button class="card" style="padding: 16px; text-align: left; cursor: pointer; background: var(--surface-2); display: block;">
          <div class="row between"><span style="width: 36px; height: 36px; border-radius: 8px; background: var(--accent-tint); color: var(--accent-700); display: grid; place-items: center;"><svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="4" width="20" height="16" rx="2"></rect><path d="m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7"></path></svg></span><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" style="color: var(--ink-3);">
              <line x1="5" y1="12" x2="19" y2="12"></line>
              <polyline points="12 5 19 12 12 19"></polyline>
            </svg></div>
          <div style="font-weight: 600; font-size: 14.5px; margin-top: 12px;">Email-in address</div>
          <div class="muted" style="font-size: 12.5px; margin-top: 4px; line-height: 1.45;">Forward or send mail to a unique address. Subject and body become a record.</div>
        </button></div>
      <div class="row gap-3" style="align-items: center; margin: 22px 0px 14px;"><span class="field-label" style="margin: 0px;">presets</span><span class="mono faint" style="font-size: 11px;">— a webhook with mapping built in</span>
        <hr class="hairline grow">
      </div>
      <div class="col gap-2"><button class="row gap-3" style="width: 100%; text-align: left; cursor: pointer; opacity: 1; border-radius: 9px; padding: 11px 14px; background: var(--surface-2); align-items: center; border-width: var(--line); border-style: var(--line); border-image: initial;"><span style="width: 32px; height: 32px; border-radius: 7px; background: var(--bg-2); display: grid; place-items: center; font-family: var(--mono); font-weight: 600; font-size: 14px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;">S</span>
          <div class="col" style="gap: 1px; min-width: 0; flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"><span style="font-weight: 500; font-size: 14px;">Stripe</span><span class="muted" style="font-size: 12px;">Payments, invoices &amp; subscription events.</span></div><span class="chip" style="font-size: 10px;">via webhook</span>
        </button><button class="row gap-3" style="width: 100%; text-align: left; cursor: pointer; opacity: 1; border-radius: 9px; padding: 11px 14px; background: var(--surface-2); align-items: center; border-width: var(--line); border-style: var(--line); border-image: initial;"><span style="width: 32px; height: 32px; border-radius: 7px; background: var(--bg-2); display: grid; place-items: center; font-family: var(--mono); font-weight: 600; font-size: 14px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;">G</span>
          <div class="col" style="gap: 1px; min-width: 0; flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"><span style="font-weight: 500; font-size: 14px;">GitHub</span><span class="muted" style="font-size: 12px;">Pushes, issues, PRs &amp; releases.</span></div><span class="chip" style="font-size: 10px;">via webhook</span>
        </button><button class="row gap-3" style="width: 100%; text-align: left; cursor: pointer; opacity: 1; border-radius: 9px; padding: 11px 14px; background: var(--surface-2); align-items: center; border-width: var(--line); border-style: var(--line); border-image: initial;"><span style="width: 32px; height: 32px; border-radius: 7px; background: var(--bg-2); display: grid; place-items: center; font-family: var(--mono); font-weight: 600; font-size: 14px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;">Z</span>
          <div class="col" style="gap: 1px; min-width: 0; flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"><span style="font-weight: 500; font-size: 14px;">Zapier</span><span class="muted" style="font-size: 12px;">Relay anything from 6,000+ apps.</span></div><span class="chip" style="font-size: 10px;">via webhook</span>
        </button><button class="row gap-3" disabled="" style="width: 100%; text-align: left; cursor: not-allowed; opacity: 0.55; border-radius: 9px; padding: 11px 14px; background: var(--surface-2); align-items: center; border-width: var(--line); border-style: var(--line); border-image: initial;"><span style="width: 32px; height: 32px; border-radius: 7px; background: var(--bg-2); display: grid; place-items: center; font-family: var(--mono); font-weight: 600; font-size: 14px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;">R</span>
          <div class="col" style="gap: 1px; min-width: 0; flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"><span style="font-weight: 500; font-size: 14px;">RSS / Atom</span><span class="muted" style="font-size: 12px;">Poll a feed and capture new items — not available yet.</span></div><span class="chip" style="font-size: 10px;">coming soon</span>
        </button><button class="row gap-3" style="width: 100%; text-align: left; cursor: pointer; opacity: 1; border-radius: 9px; padding: 11px 14px; background: var(--surface-2); align-items: center; border-width: var(--line); border-style: var(--line); border-image: initial;"><span style="width: 32px; height: 32px; border-radius: 7px; background: var(--bg-2); display: grid; place-items: center; font-family: var(--mono); font-weight: 600; font-size: 14px; flex-grow: 0; flex-shrink: 0; flex-basis: auto;">A</span>
          <div class="col" style="gap: 1px; min-width: 0; flex-grow: 1; flex-shrink: 1; flex-basis: 0%;"><span style="font-weight: 500; font-size: 14px;">Apple Shortcuts</span><span class="muted" style="font-size: 12px;">Send text from iOS &amp; macOS.</span></div><span class="chip" style="font-size: 10px;">via webhook</span>
        </button></div>
    </div><!-- step: config -->
    <!--v-if-->
    <!-- step: reveal (secret-backed presets only — shown once, right after creation) -->
    <!--v-if-->
  </div>
</div>"
`;

exports[`AddSourceModal > reveal step > matches snapshot for the reveal step (github preset) 1`] = `
"<div style="position: fixed; inset: 0; display: grid; place-items: center; z-index: 50; padding: 24px;">
  <div class="card" style="width: 600px; max-width: 100%; max-height: 90%; overflow: auto; box-shadow: var(--sh-pop);">
    <!-- head -->
    <div class="row between" style="padding: 18px 24px; border-bottom-width: var(--line); border-bottom-style: var(--line); border-bottom-color: var(--line);">
      <div class="row gap-3" style="align-items: center;">
        <!--v-if-->
        <div class="col" style="gap: 2px;"><span class="mono faint" style="font-size: 10.5px; letter-spacing: 0.12em; text-transform: uppercase;">step 2 / 2</span>
          <h3 style="font-size: 17px; font-weight: 600;">Source created</h3>
        </div>
      </div>
      <!--v-if-->
    </div><!-- step: pick -->
    <!--v-if-->
    <!-- step: config -->
    <!--v-if-->
    <!-- step: reveal (secret-backed presets only — shown once, right after creation) -->
    <div style="padding: 24px;">
      <div class="alert ok" role="alert"><svg class="ico a-ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <path d="M21.8 10A10 10 0 1 1 17 3.34"></path>
          <polyline points="22 4 12 14.01 9 11.01"></polyline>
        </svg>
        <div class="a-body">
          <div class="a-title">Source created</div>
          <div class="a-text"> Your <strong>GitHub</strong> source is ready. Copy the secret below now — for your security it will not be shown again. </div>
        </div>
        <!--v-if-->
      </div>
      <div style="margin-top: 16px;">
        <div>
          <div class="code">
            <div class="code-head"><span class="lang">webhook secret</span><button class="icon-btn mono" style="font-size: 11px; gap: 5px; display: inline-flex; align-items: center; color: var(--ink-3);"><svg class="ico" width="13" height="13" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
                  <rect x="9" y="9" width="13" height="13" rx="2"></rect>
                  <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
                </svg> copy secret</button></div>
            <div class="code-body mono" style="font-size: 12.5px; word-break: break-all;">generated-secret-value</div>
          </div>
          <div class="muted" style="font-size: 11px; margin-top: 8px;">Paste this into the GitHub repo's Settings -&gt; Webhooks -&gt; Secret field.</div>
        </div>
      </div>
      <div class="row gap-3" style="justify-content: flex-end; margin-top: 22px;"><button class="btn btn-accent"><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
            <polyline points="20 6 9 17 4 12"></polyline>
          </svg>done
          <!--v-if-->
        </button></div>
    </div>
  </div>
</div>"
`;

exports[`AddSourceModal > stripe manual secret entry > matches snapshot for the config step (stripe preset) 1`] = `
"<div style="position: fixed; inset: 0; display: grid; place-items: center; z-index: 50; padding: 24px;">
  <div class="card" style="width: 600px; max-width: 100%; max-height: 90%; overflow: auto; box-shadow: var(--sh-pop);">
    <!-- head -->
    <div class="row between" style="padding: 18px 24px; border-bottom-width: var(--line); border-bottom-style: var(--line); border-bottom-color: var(--line);">
      <div class="row gap-3" style="align-items: center;"><button class="icon-btn"><svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" style="transform: rotate(180deg);">
            <polyline points="9 18 15 12 9 6"></polyline>
          </svg></button>
        <div class="col" style="gap: 2px;"><span class="mono faint" style="font-size: 10.5px; letter-spacing: 0.12em; text-transform: uppercase;">step 2 / 2</span>
          <h3 style="font-size: 17px; font-weight: 600;">Configure Stripe</h3>
        </div>
      </div><button class="icon-btn"><svg class="ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
          <line x1="18" y1="6" x2="6" y2="18"></line>
          <line x1="6" y1="6" x2="18" y2="18"></line>
        </svg></button>
    </div><!-- step: pick -->
    <!--v-if-->
    <!-- step: config -->
    <div style="padding: 24px;">
      <div style="margin-bottom: 16px;">
        <div class="alert info" role="alert"><svg class="ico a-ico" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
            <circle cx="12" cy="12" r="10"></circle>
            <line x1="12" y1="16" x2="12" y2="12"></line>
            <line x1="12" y1="8" x2="12.01" y2="8"></line>
          </svg>
          <div class="a-body">
            <div class="a-title">This is a webhook preset</div>
            <div class="a-text"> A <strong>Stripe</strong> source is a webhook endpoint with Stripe field-mapping applied automatically, with signature verification. You can edit the mapping any time. </div>
          </div>
          <!--v-if-->
        </div>
      </div><span class="field-label" style="margin-bottom: 8px;">ingest url — point Stripe here</span>
      <div class="code">
        <div class="code-head"><span class="lang">endpoint</span><span class="mono faint" style="font-size: 11px;">assigned on save</span></div>
        <div class="code-body mono" style="font-size: 12.5px; word-break: break-all;"> https://ingest.markpost.io/v1/hooks/<span style="color: var(--accent-700);">stripe_xxxxxxxx</span></div>
      </div>
      <div style="margin-top: 16px;"><span class="field-label" style="margin-bottom: 8px;">field mapping</span>
        <div class="row wrap gap-2"><span class="chip accent">amount</span><span class="chip accent">customer</span><span class="chip accent">status</span></div>
      </div>
      <div style="margin-top: 16px;">
        <div class="field"><span class="field-label"><span class="num">01</span><span>Stripe webhook signing secret</span><span class="req">*</span>
          <!--v-if--></span>
          <div class="input-wrap"><span class="lead-addon"><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><circle cx="7.5" cy="15.5" r="4.5"></circle><path d="m10.5 12.5 8-8"></path><path d="m16 6 2 2"></path><path d="m18.5 4.5 2 2"></path></svg></span><input class="input has-lead mono" style="font-size: 13.5px;" type="password" value=""></div><span class="field-msg"><!--v-if--><!--v-if--> From your Stripe Dashboard -&gt; Webhooks -&gt; your endpoint -&gt; Signing secret.</span>
        </div>
      </div>
      <div style="margin-top: 18px;">
        <div class="field"><span class="field-label"><span class="num">02</span><span>Route records to</span>
          <!--v-if-->
          <!--v-if--></span>
          <div class="input-wrap"><span class="lead-addon"><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round"><path d="M20 20a2 2 0 0 0 2-2V8a2 2 0 0 0-2-2h-7.9a2 2 0 0 1-1.69-.9L9.6 3.9A2 2 0 0 0 7.93 3H4a2 2 0 0 0-2 2v13a2 2 0 0 0 2 2Z"></path></svg></span><input class="input has-lead mono" style="font-size: 13.5px;"></div><span class="field-msg"><!--v-if--><!--v-if--> folder inside your vault</span>
        </div>
      </div>
      <div class="row gap-3" style="justify-content: flex-end; margin-top: 22px;"><button class="btn btn-ghost">
          <!--v-if-->back
          <!--v-if-->
        </button><button class="btn btn-accent" disabled=""><svg class="ico" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
            <polyline points="20 6 9 17 4 12"></polyline>
          </svg>add source
          <!--v-if-->
        </button></div>
    </div><!-- step: reveal (secret-backed presets only — shown once, right after creation) -->
    <!--v-if-->
  </div>
</div>"
`;
